# nand2tetris

./: README.md
assembler/src/: main.rs
jack-compiler/: Cargo.toml  xml_converter.py
jack-compiler/src/: cli.rs  compiler.rs  emitter.rs  errors.rs  main.rs  parser.rs  token.rs  tokenizer.rs
jack-compiler/src/ast/: exprs.rs  kinds.rs  mod.rs  nodes.rs  statements.rs
jack-compiler/src/emitter/: mod.rs  segment.rs  variable.rs
jack-compiler/src/parser/: classes.rs  expr.rs  macros.rs  mod.rs  statements.rs  tests.rs
jack-compiler/src/tokenizer/: mod.rs  test.rs  token_stream.rs
jack-os/: Memory.jack  Sys.jack
jack-vm-translator/: Cargo.toml
jack-vm-translator/src/: command.rs  errors.rs  main.rs  parser.rs  segment.rs  source.rs  translation_state.rs  translator.rs
particle-system/: Main.jack  Main.vm  Particle.jack  Particle.vm  ParticleSystem.jack  ParticleSystem.vm
projects/01/: And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl  Inc16.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/assembler/: Cargo.toml
projects/11/Average/: Main.vm
projects/11/ComplexArrays/: Main.vm
projects/11/ConvertToBin/: Main.jack  Main.vm
projects/11/Pong/: Ball.vm  Bat.vm  Main.vm  PongGame.vm
projects/11/Seven/: Main.vm
projects/11/Square/: Main.vm  Square.vm  (+1 more)
(+21 files in other folders)
