[package]
name = "jack-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.20", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
thiserror = "1.0.35"
