[package]
name = "jack-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.20", features = ["derive"] }
derive_more = "0.99.17"
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
pretty_assertions = "1.3.0"
regex = "1.6.0"
thiserror = "1.0.35"
